crates/serpen/tests/snapshots/test_circular_dependencies__four_module_cycle_error.snap
---
source: crates/serpen/tests/test_circular_dependencies.rs
expression: error_msg
---
Circular dependencies detected in the module graph:

Cycle 1: module_b → module_c → module_d → module_a
  Type: FunctionLevel
  Suggestion: Move imports inside functions to enable lazy loading
