crates/serpen/tests/snapshots/test_circular_dependencies__package_level_cycles_bundled.snap
---
source: crates/serpen/tests/test_circular_dependencies.rs
expression: bundled_content
---
#!/usr/bin/env python3
# Generated by Serpen - Python Source Bundler
# https://github.com/tinovyatkin/serpen

# ─ Module: pkg1 ─
import types
pkg1 = types.ModuleType('pkg1')
exec('def main_function():\n    """Main function that uses helper from pkg2"""\n    return f"pkg1.main({helper_function()})"\ndef utility_function():\n    """Utility that pkg2 will import"""\n    return "pkg1_utility"', globals(), pkg1.__dict__)

# ─ Module: pkg2 ─
def helper_function():
    """Helper function that depends on pkg1"""
    util_result = utility_function()
    return f"pkg2.helper(using_{util_result})"
def another_helper():
    """Another function in pkg2"""
    return "pkg2_helper"

# ─ Entry Module: main ─
def main():
    result = pkg1.main_function()
    print(f"Package cycle result: {result}")
if __name__ == "__main__":
    main()
